--- a/src/main/webapp/WEB-INF/view/automobile.html
+++ b/src/main/webapp/WEB-INF/view/automobile.html
@@ -2,12 +2,12 @@
 <html>
  <head> 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-    <title>直通車</title> 
+    <title>直通车</title> 
     <meta name="viewport" id="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="../commons/css/bootstrap.css" /> 
     <link rel="stylesheet" href="../commons/css/style.css" />  
     <link rel="stylesheet" href="../commons/css/train.css" /> 
-	<script type="text/javascript" src="commons/js/jquery-1.js"></script>
+	<script type="text/javascript" src="../commons/js/jquery-1.js"></script>
  </head> 
  <body> 
 
@@ -18,7 +18,7 @@
                     
                 </div>
                 <div class="mhb_center mhb_center_across">
-                    <h2 class="">火车票</h2>
+                    <h2 class="">直通车</h2>
                 </div>
                 <div class="mhb_right">
                     <a class="account" href="/me.html" ><i class="glyphicon glyphicon-user"></i></a>
@@ -118,15 +118,18 @@
             <a href="tel:13456789" th:href="'tel:' + ${config.telephone}"  id="tel">客服电话</a>
         </div>
         <div class="my_order">
+        
+	        <a href="list.html">
             <span><img src="../commons/img/order_img.png" alt="" class="serv_order"></span>
             <span class="my_orderd">我的订单</span>
+            </a>
         </div>
     </div>
 </div>
 
    <section class="i-slogan"> 
     <div class="slogan-text"> 
-     <span>让旅游更简单</span> 
+     <span>幸福在路上</span> 
     </div> 
    </section> 
   <a href="javascript:;" class="to-top J_toTop hidden"></a> 
