--- a/src/main/webapp/WEB-INF/view/home.html
+++ b/src/main/webapp/WEB-INF/view/home.html
@@ -190,7 +190,7 @@
 	</section>
 	<section class="i-slogan">
 		<div class="slogan-text">
-			<span>让旅游更简单</span>
+			<span>幸福在路上</span>
 		</div>
 	</section>
 	<footer id="footerID" style="padding-bottom: 10px;">
