--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -11,7 +11,7 @@
 	<div class="page-wrap" id="index">
 		<div id="index1" class="step1 page">
 			<header class="border-bottom">
-				<a href="home.html">
+				<a href="/home.html">
 					<div class="close-btn historyBack">
 						<i class="glyphicon glyphicon-menu-left"></i>
 					</div>
