--- a/src/main/webapp/WEB-INF/view/me.html
+++ b/src/main/webapp/WEB-INF/view/me.html
@@ -121,7 +121,7 @@
 
    <section class="i-slogan"> 
     <div class="slogan-text"> 
-     <span>让旅游更简单</span> 
+     <span>幸福在路上</span> 
     </div> 
    </section> 
   <a href="javascript:;" class="to-top J_toTop hidden"></a> 
@@ -149,7 +149,7 @@
     </div>
    </div>
   </footer>   
-	<script type="text/javascript" src="commons/js/jquery-1.js"></script>
+	<script type="text/javascript" src="../commons/js/jquery-1.js"></script>
   	 <script type="text/javascript" src="../commons/js/cookie.js"></script>
 	 <script>
 		 $(document).ready(function(){
