--- a/src/main/webapp/WEB-INF/view/productList.html
+++ b/src/main/webapp/WEB-INF/view/productList.html
@@ -18,7 +18,7 @@
 	<header class="m_header" id="J_header">
 		<div class="m_header_bar J_header-bar">
 			<div class="mhb_left">
-				<a class="go_to_home" href="home.html"><i
+				<a class="go_to_home" href="/home.html"><i
 					class="glyphicon glyphicon-chevron-left"></i></a>
 			</div>
 			<div class="mhb_center"> 
