--- a/src/main/webapp/WEB-INF/view/visa.html
+++ b/src/main/webapp/WEB-INF/view/visa.html
@@ -82,15 +82,18 @@
             <a href="tel:13456789" th:href="'tel:' + ${config.telephone}"  id="tel">客服电话</a>
         </div>
         <div class="my_order">
+        
+	        <a href="list.html">
             <span><img src="../commons/img/order_img.png" alt="" class="serv_order"></span>
             <span class="my_orderd">我的订单</span>
+            </a>
         </div>
     </div>
 </div>
 
    <section class="i-slogan"> 
     <div class="slogan-text"> 
-     <span>让旅游更简单</span> 
+     <span>幸福在路上</span> 
     </div> 
    </section> 
   <a href="javascript:;" class="to-top J_toTop hidden"></a> 
