--- a/src/main/webapp/WEB-INF/view/mayn.html
+++ b/src/main/webapp/WEB-INF/view/mayn.html
@@ -13,7 +13,7 @@
      <header class="m_header  sticky_head" id="J_header" style="width:100%;">
             <div class="m_header_bar J_header-bar">
                 <div class="mhb_left">
-                    <a class="go_to_home" href="home.html"><i class="glyphicon glyphicon-home"></i></a>
+                    <a class="go_to_home" href="/home.html"><i class="glyphicon glyphicon-home"></i></a>
                     
                 </div>
                 <div class="mhb_center mhb_center_across">
@@ -51,7 +51,7 @@
 
    <section class="i-slogan"> 
     <div class="slogan-text"> 
-     <span>让旅游更简单</span> 
+     <span>幸福在路上</span> 
     </div> 
    </section> 
   <a href="javascript:;" class="to-top J_toTop hidden"></a> 
