--- a/src/main/webapp/WEB-INF/view/my.html
+++ b/src/main/webapp/WEB-INF/view/my.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../commons/css/bootstrap.css" /> 
   <link rel="stylesheet" href="../commons/css/style.css" />  
   <link rel="stylesheet" href="../commons/css/train.css" /> 
-	<script type="text/javascript" src="commons/js/jquery-1.js"></script>
+	<script type="text/javascript" src="../commons/js/jquery-1.js"></script>
      
  </head> 
  <body> 
@@ -67,15 +67,18 @@
             <a href="tel:13456789" th:href="'tel:' + ${config.telephone}"  id="tel">客服电话</a>
         </div>
         <div class="my_order">
+        
+	        <a href="list.html">
             <span><img src="../commons/img/order_img.png" alt="" class="serv_order"></span>
             <span class="my_orderd">我的订单</span>
+            </a>
         </div>
     </div>
 </div>
 
    <section class="i-slogan"> 
     <div class="slogan-text"> 
-     <span>让旅游更简单</span> 
+     <span>幸福在路上</span> 
     </div> 
    </section> 
   <a href="javascript:;" class="to-top J_toTop hidden"></a> 
