--- a/src/main/webapp/WEB-INF/view/hotel.html
+++ b/src/main/webapp/WEB-INF/view/hotel.html
@@ -22,7 +22,7 @@
 			</div>
 			<div class="mhb_right">
 				<a class="account" href="/me.html"><i class="glyphicon glyphicon-user"></i></a>
-				<div class="navi J_header-navi-trigger">导航</div>
+<!-- 				<div class="navi J_header-navi-trigger">导航</div> -->
 			</div>
 	
 		</div>
@@ -52,6 +52,24 @@
 	            </li>
 	            <li class="date-label1 fr" style="font-size: 2rem;"><span class="date-sum" id="_span"></span></li>
 		    </ul>
+	    </div>
+	    
+	      <div class="departdate-wrap">
+	        <div class="departText"><span class="xi_xi">价格</span> <input placeholder="请填写价格" type="text" class="name adult-put" name="userName" id="userName" value=""></div>
+	    </div>
+	      <div class="departdate-wrap">
+	        <div class="departText"><span class="xi_xi">星级</span> 
+	        
+	        <select  name="periodType"  class="name adult-put">
+	        							<option value="0">请选择</option>
+										<option value="1">★</option>
+										<option value="2">★★</option>
+										<option value="2">★★★</option>
+										<option value="2">★★★★</option>
+										<option value="2">★★★★★</option>
+									</select>
+	        
+	        </div>
 	    </div>
         <!--添加人-->
         <ul id="t_re">
@@ -84,10 +102,10 @@
 	
 	    <!--电话-->
 	     <div class="departdate-wrap">
-	        <div class="departText"> 联系人:<input placeholder="请填写联系人姓名" type="text" class="name adult-put" name="userName" id="userName" value=""></div>
+	        <div class="departText"><span class="xi_xi">联系人</span> <input placeholder="请填写联系人姓名" type="text" class="name adult-put" name="userName" id="userName" value=""></div>
 	    </div>
 	    <div class="departdate-wrap">
-	        <div class="departText"> 联系方式: <input placeholder="请填写联系方式" type="text" class="name adult-put" name="userTel" id="userTel" value=""></div>
+	        <div class="departText"><span class="xi_xi">联系方式</span> <input placeholder="请填写联系方式" type="text" class="name adult-put" name="userTel" id="userTel" value=""></div>
 	    </div>
 	
 	    <div class="btn"><a href="javascript:void(0);" class="search-btn" onclick="_sure()">确认</a></div>
