--- a/src/main/webapp/WEB-INF/view/me.html
+++ b/src/main/webapp/WEB-INF/view/me.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="../commons/css/bootstrap.css" /> 
   <link rel="stylesheet" href="../commons/css/style.css" />  
  <link rel="stylesheet" href="../commons/css/me.css" />  
+ <link rel="stylesheet" href="../commons/css/train.css" /> 
+ 
  </head> 
  <body> 
 
@@ -21,7 +23,7 @@
                 </div>
                 <div class="mhb_right">
                     <a class="account" href="/me.html" ><i class="glyphicon glyphicon-user"></i></a>
-                    <div class="navi J_header-navi-trigger">导航</div>
+<!--                     <div class="navi J_header-navi-trigger">导航</div> -->
                 </div>
                 
             </div>
@@ -117,8 +119,8 @@
     </div>
 </div>
 
-
-
+<div class="btn"><a href="javascript:void(0);" class="search-btn" >退出登陆</a></div>
+ 
    <section class="i-slogan"> 
     <div class="slogan-text"> 
      <span>幸福在路上</span> 
