--- a/src/main/webapp/WEB-INF/view/productDetail.html
+++ b/src/main/webapp/WEB-INF/view/productDetail.html
@@ -82,9 +82,9 @@
     </div> 
     <div class="mhb_right"> 
      <a class="account" href=""><i class="glyphicon glyphicon-user"></i></a> 
-     <div class="navi J_header-navi-trigger">
-      导航
-     </div> 
+<!--      <div class="navi J_header-navi-trigger"> -->
+<!--       导航 -->
+<!--      </div>  -->
     </div>
    </div> 
   </header> 
@@ -189,7 +189,7 @@ $(".main_image img").each(function () {
       </dl> 
      </div> 
      
-    <div id="fysm11" class="costInfo" style="margin-top: 10px;">
+    <div id="fysm11" class="costInfo" style="margin-top: 10px;padding-bottom: 38px;">
 		<h4>预定须知</h4>
 		<dl th:utext="${map.notice}">
 			
