--- a/src/main/webapp/WEB-INF/view/trainList.html
+++ b/src/main/webapp/WEB-INF/view/trainList.html
@@ -14,8 +14,10 @@
             <div>
     <header>
         <span class="header-back">
+        <a href="Javascript:history.go(-1);void(0);">
             <i class="glyphicon glyphicon-chevron-left">
             </i>
+            </a>
         </span>
         <p>
             我的火车票
