--- a/src/main/webapp/WEB-INF/view/aircraft.html
+++ b/src/main/webapp/WEB-INF/view/aircraft.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="mhb_right">
                     <a class="account" href="/me.html" ><i class="glyphicon glyphicon-user"></i></a>
-                    <div class="navi J_header-navi-trigger">导航</div>
+<!--                     <div class="navi J_header-navi-trigger">导航</div> -->
                 </div>
                 
             </div>
@@ -100,10 +100,10 @@
 
     <!--电话-->
    <div class="departdate-wrap">
-        <div class="departText"> 联系人 <input placeholder="请填写联系人姓名" type="text" class="name adult-put"  name="userName" id="userName" value=""></div>
+        <div class="departText"><span class="xi_xi">联系人</span> <input placeholder="请填写联系人姓名" type="text" class="name adult-put"  name="userName" id="userName" value=""></div>
     </div>
     <div class="departdate-wrap">
-        <div class="departText"> 联系方式 <input placeholder="请填写联系方式" type="text" class="name adult-put" name="userTel" id="userTel" value=""></div>
+        <div class="departText"><span class="xi_xi">联系方式</span> <input placeholder="请填写联系方式" type="text" class="name adult-put" name="userTel" id="userTel" value=""></div>
     </div>
          
 
