--- a/src/main/webapp/WEB-INF/view/myList.html
+++ b/src/main/webapp/WEB-INF/view/myList.html
@@ -14,8 +14,9 @@
             <div>
     <header>
         <span class="header-back">
-            <i class="glyphicon glyphicon-chevron-left">
-            </i>
+        	<a href="Javascript:history.go(-1);void(0);">
+            	<i class="glyphicon glyphicon-chevron-left"></i>
+            </a>
         </span>
         <p>
             私人定制列表
