--- a/src/main/webapp/WEB-INF/view/ticketList.html
+++ b/src/main/webapp/WEB-INF/view/ticketList.html
@@ -27,7 +27,7 @@
 				<a class="account" href="/me.html"><i
 					class="glyphicon glyphicon-user"></i></a>
 
-				<div class="navi J_header-navi-trigger">导航</div>
+<!-- 				<div class="navi J_header-navi-trigger">导航</div> -->
 			</div>
 		</div>
 	</header>
