--- a/src/main/webapp/commons/css/home.css
+++ b/src/main/webapp/commons/css/home.css
@@ -25,7 +25,7 @@ a:hover { color: #D40000; text-decoration: none}
 .main_image{height:150px;overflow:hidden;position:relative;}
 .main_image ul{height:150px;overflow:hidden;position:absolute;top:0;left:0}
 .main_image li{float:left;height:254px;}
-.main_image li img{display:block;width:100%; height: 100%;margin: 0 !important;}
+.main_image li img{display:block;width:100%;margin: 0 !important;}
 .main_image li a{display:block;width:100%;height:254px}
 
 div.flicking_con{position:absolute;top:120px;left:50%;z-index:999;width:300px;height:21px;margin:0 0 0 -50px;}
