--- a/src/main/webapp/WEB-INF/view/home.html
+++ b/src/main/webapp/WEB-INF/view/home.html
@@ -128,7 +128,7 @@
        <tbody>
          <tr>
            <td class="hasImg color_red" rowspan="2">
-             <a href="hotel/addHotel.html"><span class="word color_red">私人定制</span>
+             <a href="my/addMy.html"><span class="word color_red">私人定制</span>
        <img class="category-img" src="../commons/img/sirendz.png">
              </a>
            </td>
@@ -155,10 +155,10 @@
              <a href="hotel/addHotel.html"><span class="word">酒店</span><img class="category-img" src="../commons/img/1499221905_79016.png"></a>
            </td>
            <td class="hasImg">
-            <a href="product/list.html?id=3" > <span class="word"><img src="../commons/img/menpiao.png" width="20px" style="padding-right: 10px;">门票</span></a>
+            <a href="ticket/list.html" > <span class="word"><img src="../commons/img/menpiao.png" width="20px" style="padding-right: 10px;">门票</span></a>
            </td>
            <td class="hasImg">
-             <a href="product/list.html?id=2"> <span class="word"><img src="../commons/img/shequ.png" width="20px" style="padding-right:5px;">加入社区</span></a>
+            <a href='javascript:alert("敬请期待")'> <span class="word"><img src="../commons/img/shequ.png" width="20px" style="padding-right:5px;">加入社区</span></a>
             </td>                     
          </tr>
                         
