--- a/src/main/webapp/WEB-INF/view/me.html
+++ b/src/main/webapp/WEB-INF/view/me.html
@@ -78,6 +78,16 @@
     </div> -->
     <div id="my-wallet">
         <div class="my-wallet-header">
+            <a href="hotel/lists.html">
+                <h2 class="title">
+                    我的酒店
+                </h2>
+                <img src="../commons/img/Cii_JVlCKWiIMyNAAAAG_RNbuYIAAAEHQP_-OoAAAcW655_w640_h0_c0_t0.png">
+            </a>
+        </div>
+    </div>
+    <div id="my-wallet">
+        <div class="my-wallet-header">
             <a href="train/list.html">
                 <h2 class="title">
                     我的火车票
